--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@folio/stripes-core": "^0.0.8-test",
     "@folio/users": "^0.0.1-test",
-    "@folio/trivial": "^0.0.2-test"
+    "@folio/trivial": "^0.0.2-test",
+    "@folio-sample-modules/okapi-console": "^0.0.1-test"
   }
 }
